syntax = "proto3";


package structs.structs;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "structs/structs/keys.proto";
import "amino/amino.proto";

option go_package = "structs/x/structs/types";

message AddressRecord {
  string address = 1;
  uint64 playerIndex = 2;
}

message AddressAssociation {
  string address = 1;
  uint64 playerIndex = 2;
  registrationStatus registrationStatus = 3 [(amino.dont_omitempty) = true];
}

message AddressActivity {
  string                        address     = 1;
  int64                         blockHeight = 2;
  google.protobuf.Timestamp     blockTime   = 3 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
}

message InternalAddressAssociation {
  string address = 1;
  string objectId = 2;
}
