syntax = "proto3";

package structs.structs;

option go_package = "structs/x/structs/types";

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";


message Agreement {

  option (gogoproto.equal) = true;

  string  id          = 1;

  string providerId   = 2;

  uint64 capacity     = 3; // This should probably be a grid value instead

  uint64 startBlock   = 4;
  uint64 endblock     = 5;


}
